skupper/step5/se-rhsi1.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: rhsi1-mockbin-skupper
  namespace: mockbin
spec:
  hosts:
  - rhsi1-mockbin.skupper.svc.cluster.local
  ports:
  - name: http
    number: 8080
    protocol: HTTP
    targetPort: 8080
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: rhsi1-mockbin-metrics-skupper
  namespace: mockbin
spec:
  hosts:
  - rhsi1-mockbin-metrics.skupper.svc.cluster.local
  ports:
  - name: http
    number: 15020
    protocol: HTTP
    targetPort: 15020
  resolution: DNS
---
