skupper/step5/se-rhsi2.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: rhsi2-mockbin-skupper
  namespace: mockbin
spec:
  hosts:
  - rhsi2-mockbin.skupper.svc.cluster.local
  ports:
  - name: http
    number: 8080
    protocol: HTTP
    targetPort: 8080
  resolution: DNS
---
