skupper/step5/vs-rhsi1.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mockbin
  namespace: mockbin
spec:
  gateways:
  - istio-system/frontend-gateway
  - mesh
  hosts:
  - rhsi1.example.com
  - rhsi1-mockbin.skupper.svc.cluster.local
  http:
  - match:
    - port: 15020
    route:
    - destination:
        host: mockbin
        port:
          number: 15020
      weight: 100
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: mockbin
        port:
          number: 8080
      weight: 100
  tls:
  - match:
    - port: 443
      sniHosts:
      - rhsi1.example.com
    route:
    - destination:
        host: mockbin
